# START-Hack-2024

./: .gitattributes  .gitignore  .gitmodules  README.md  api.sh  environment.yml  grml.yaml  pyproject.toml  record_voice.py  recorder_test.py  requirements.txt  runner.py  st_web_app.py  test_twilio.py
.github/workflows/: gitguardian.yml
STT/: record_voice.py  speech_to_text.py
TTS/: tts.py  voices.py
backend/: .gitignore  11labstest2.py  README.md  app.py  data.py  prompt_constants.py  pyproject.toml  record_voice.py  sentiment-analysis-request.py  sentiment.py  speech_to_text.py  speech_to_text_faster.py  stt.py  tts.py
backend/vectordb/: chroma.sqlite3
backend/vectordb/d2336c18-6406-4069-be9b-26121faf9b86/: index_metadata.pickle
data/data/bauen/: data.html
data/data/bauen/baugesuch-baubewilligung/: data.html
data/data/bauen/hausanalyse/: data.html
data/data/bauen/hochbau/: data.html
data/data/bauen/ich-will-bauen/: data.html
data/data/bauen/raumentwicklung/: data.html
data/data/bauen/tiefbau/: data.html
data/data/bauen/wohnbaufoerderung/: data.html
data/data/bildung-sport/: data.html
data/data/bildung-sport/berufsbildung/: data.html
data/data/bildung-sport/bildungsrat/: data.html
data/data/bildung-sport/bslb/: data.html
data/data/bildung-sport/hochschule/: data.html
data/data/bildung-sport/mittelschule/: data.html
data/data/bildung-sport/offene-stellen-fuer-lehrpersonen/: data.html
data/data/bildung-sport/sport/: data.html
data/data/bildung-sport/stipendien-und-studiendarlehen/: data.html
data/data/bildung-sport/ueber-bildung/: data.html
data/data/bildung-sport/volksschule/: data.html
data/data/gesundheit-soziales/: data.html
data/data/gesundheit-soziales/gesundheit/: data.html
data/data/gesundheit-soziales/heb_hinschauen_einschaetzen_begleiten/: data.html
data/data/gesundheit-soziales/kompass-sg/: data.html
data/data/gesundheit-soziales/soziales/: data.html
data/data/gesundheit-soziales/verbraucherschutz/: data.html
data/data/kultur/: data.html
data/data/kultur/archaeologie/: data.html
data/data/politik-verwaltung/: data.html
data/data/recht/: data.html
data/data/sicherheit/: data.html
data/data/steuern-finanzen/: data.html
data/data/ueber-den-kanton-st-gallen/: data.html
data/data/umwelt-natur/: data.html
data/data/verkehr/: data.html
data/data/wirtschaft-arbeit/: data.html
frontend/: app.py  package.json  ratings.json
frontend/src/: App.css  App.js  AudioRecorder.jsx  index.css
scripts/: api.sh  grml.sh
streamlit_app/: ratings.json  st_web_app.py
tokenizer/: data.py  pickle_data.py  rebuild.py
vectordb/: chroma.sqlite3
(+3671 files in other folders)
